27.05.2001	MPEG fixes <garetxe@users.sf.net>

	* plugins/mpeg.c: Works now if Z's yuv pixformat is YUYV and
	capture isn't buffered push. Core when buffered push and lock with
	YVU420 (probably RGB too, untested). Probably bugs in plugin.c
	and capture.c.

25.05.2001	<garetxe@users.sf.net>

	* plugins/screenshot: YVU420, TTX capture.

24.05.2001	<mschimek@users.sourceforge.net>

	* plugins/lirc/lirc.c: lirc_page fixed in plugin_add_properties

24.05.2001	Rolling headers <garetxe@users.sf.net>

	* src/zvbi.c: Rolling headers support (just the time field for the
	moment).

19.05.2001	Fullscreen <garetxe@users.sourceforge.net>

	* src/fullscreen.c: Made fullscreen usable under many heads.	

16.05.2001	<mschimek@users.sourceforge.net>

	* Fixed port_grabbed shortcut in xvz_grab_port.

14.05.2001	--yuv-format flag <garetxe@users.sourceforge.net>

	* src/main.c, capture.c, x11stuff.c: Added CLO [command line
	option :-)] for deciding between YUYV and YVU420.
	* src/fullscreen.c: No longer grabs the keyboard.
	* src/videodev*: moved to /common, made libvbi use these versions
	too for consistency.

13.05.2001	CC classify gui <garetxe@users.sourceforge.net>

	* src/ttxview.c: Added gui for the CC classification, added
	'Subtitle Page' VBI property and removed toolbar spinbutton.
	* BUGS: Investigated problems with bundle_data under V4L1, they
	were due to a bug in bttv support for interlaced YUV420P. Maintainer
	informed.

12.05.2001	YVU420 <garetxe@users.sourceforge.net>

	* src/capture.c: Defaulted to YVU420P for capture, plugins need
	to be adapted. Added display of _DATA bundles, using yuv2rgb.
	* tveng: Added assume_yvu to work around V4L1 API limitations.
	* yuv2rgb_mmx: Added lacking "emms" to reenable math coprocessor.

11.05.2001	did some things from TODO <garetxe@users.sourceforge.net>

	* src/channel_editor.c: Channels can have an arbitrary order now.
	* configure.in: Remove --disable-ordering flag.
	* src/zvbi.c: Added a verboser message when vbi fails to open.