@@ -97,6 +97,12 @@ gchar *s = N_("Level 1.0");
 gchar *s = N_("Level 1.5 (additional national characters)");
 gchar *s = N_("Level 2.5 (more colours, font styles and graphics)");
 gchar *s = N_("Level 3.5 (proportional spacing, multicolour graphics)");
+gchar *s = N_("Interpolation type:");
+gchar *s = N_("Quality/speed tradeoff when scaling and antialing the page.");
+gchar *s = N_("Nearest (fast, looks ugly when scaled)");
+gchar *s = N_("Tiles (slightly slower, somewhat better)");
+gchar *s = N_("Bilinear (good quality but slow)");
+gchar *s = N_("Hyper (best quality but CPU intensive)");
 gchar *s = N_("General");
 gchar *s = N_("Filtering");
 gchar *s = N_("Program related links:");
